--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Build APK
         uses: digreatbrian/buildozer-action@v2
         with:
-          workdir: .
-          buildozer_version: stable
+          work-dir: .
+          buildozer-cmd: "buildozer android debug"
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
